Fixed collapse section icons and material-menu-button style

--- a/material-menu-button/material-menu-button.less
+++ b/material-menu-button/material-menu-button.less
@@ -31,7 +31,7 @@
 
 html[dir="ltr"] {
 	.material-menu-button-impl {
-		button {
+		material-button {
 			i.material-icons {
 				margin-left: 16px;
 			}
@@ -41,7 +41,7 @@ html[dir="ltr"] {
 
 html[dir="rtl"] {
 	.material-menu-button-impl {
-		button {
+		material-button {
 			i.material-icons {
 				margin-right: 16px;
 			}
